# opengl_minimo

./: CMakeLists - Avell.txt  CMakeLists - Lenovo.txt  CMakeLists - Medilab.txt  CMakeLists.txt  Objeto3d.h  camera.cpp  camera.h  cubeExample.cpp  cubeExample.h  fragmentShader.glsl  fragmentShader3d.glsl  framebuffer.cpp  framebuffer.h  loadDicom.h  main.cpp  readme.md  rendering3d.cpp  rendering3d.h  shader.h  shaderUtils.cpp  shaderUtils.h  transform.h  vertexShader3d.glsl  volumeRendering.cpp  volumeRendering.h
